--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Condominus</title>
+    <title>CondoLife</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
     <!-- Bootstrap Icons -->
@@ -28,16 +28,14 @@
                     <!-- Header -->
                     <div class="text-start" id="header">
                         <h1 class="display-3 fw-bolder mb-5 text-green">
-                            Condominus
+                            CondoLife
                         </h1>
                         <h2 class="text-green">
-                            Loren Ipsum Lorem Ipsum Lorem Ipsum!
+                            Gerenciar um condomínio nunca foi tão fácil!
                         </h2>
                         <p class="my-5 text-black-60 fw-medium pe-6 pe-lg-0 me-5 me-lg-0">
-                            Loren Ipsum Lorem Ipsum Lorem Ipsum!<br />
-                            Loren Ipsum Lorem Ipsum Lorem Ipsum
-                            Loren Ipsum Lorem Ipsum Lorem Ipsum
-                            Loren Ipsum Lorem Ipsum Lorem Ipsum!
+                            Empresa em ascensão que busca trazer uma maior facilidade<br>
+                            no gerenciamento de complexos residenciais!
                         </p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-start mb-3">
                             <a class="btn btn-primary btn-lg px-5 py-3 me-3 fs-6 fw-medium rounded-pill shadow"
@@ -55,72 +53,72 @@
     <section class="page-section" id="services">
         <div class="container px-5 px-lg-0 py-0 py-sm-5">
             <div class="row gx-4 gx-lg-5 a">
-                <div class="col-md-6 text-center text-lg-start">
+                <div class="col-lg-4 col-md-6 text-center text-lg-start">
                     <div class="col-lg-12 pe-md-5">
                         <div>
                             <h3 class="fs-3 mb-5 lh-base">
-                                Loren Ipsum Loren Ipsum Loren Ipsum:
-                                <strong>Ipsum!</strong>
+                                Menores esforços, <span>maiores <strong>resultados</strong></span>
                             </h3>
                             <p class="text-muted mb-0 lh-base">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                                Surgimos para facilitar e melhorar o processo de gestão ao máximo.
                                 <br />
                                 <br />
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum - <b>Loren Ipsum Loren Ipsum.</b>
+                                Com a utilização de nosso sistema, além de tornar todos os processos muito mais fáceis, 
+                                <b>terá também uma organização nunca vista antes!</b>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mt-5 mt-md-0">
+                <div class="col-lg-8 col-md-6 mt-5 mt-md-0">
                     <div class="row">
-                        <div class="col-lg-6 pe-0">
+                        <div class="col-lg-5 offset-lg-1 pe-0">
                             <div class="row mt-5 mt-md-0">
                                 <div class="col-4 d-flex align-items-center">
-                                    <img src="./assets/icon/wallet.webp" class="h-auto w-100 mx-auto" />
+                                    <img src="./assets/icon/lock.png" class="h-auto w-100 mx-auto" />
                                 </div>
                                 <div class="col-8">
-                                    <h3 class="h5 mb-2 fw-bold">Loren Ipsum</h3>
+                                    <h3 class="h5 mb-2 fw-bold">Controle de acesso</h3>
                                     <p class="text-muted mb-0">
-                                        Loren Ipsum, Loren Ipsum Loren Ipsum.
+                                        Tenha sua portaria automatizada e organizada.
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 pe-0">
+                        <div class="col-lg-5 offset-lg-1 pe-0">
                             <div class="row mt-5 mt-lg-0">
                                 <div class="col-4 d-flex align-items-center">
-                                    <img src="./assets/icon/mobile.webp" class="h-auto w-100 mx-auto" />
+                                    <img src="./assets/icon/box.png" class="h-auto w-100 mx-auto" />
                                 </div>
                                 <div class="col-8">
-                                    <h3 class="h5 mb-2 fw-bold">Loren Ipsum</h3>
+                                    <h3 class="h5 mb-2 fw-bold">Encomendas</h3>
                                     <p class="text-muted mb-0">
-                                        Loren Ipsum, Loren Ipsum, Loren Ipsum.
+                                        Tenha registro de todas as encomendas recebidas, atribuídas à seu respectivo morador
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 pe-0">
+                        <div class="col-lg-5 offset-lg-1 pe-0">
                             <div class="row mt-5">
                                 <div class="col-4 d-flex align-items-center">
-                                    <img src="./assets/icon/invoice.webp" class="h-auto w-100 mx-auto" />
+                                    <img src="./assets/icon/comms.png" class="h-auto w-100 mx-auto" />
                                 </div>
                                 <div class="col-8">
-                                    <h3 class="h5 mb-2 fw-bold">Loren Ipsum</h3>
+                                    <h3 class="h5 mb-2 fw-bold">Comunicação</h3>
                                     <p class="text-muted mb-0">
-                                        Loren Ipsum Loren Ipsum Loren Ipsum.
+                                        Tenha facilidade na comunicação entre gestão - moradores e vice-versa!
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6 pe-0">
+                        <div class="col-lg-5 offset-lg-1 pe-0">
                             <div class="row mt-5">
                                 <div class="col-4 d-flex align-items-center">
-                                    <img src="./assets/icon/devices.webp" class="h-auto w-100 mx-auto" />
+                                    <img src="./assets/icon/calendar.png" class="h-auto w-100 mx-auto" />
                                 </div>
                                 <div class="col-8">
-                                    <h3 class="h5 mb-2 fw-bold">Loren Ipsum</h3>
+                                    <h3 class="h5 mb-2 fw-bold">Liberdade para reservar</h3>
                                     <p class="text-muted mb-0">
-                                        Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                                        Opções para reserva de áreas comuns diretamente no celular dos moradores.
                                     </p>
                                 </div>
                             </div>
@@ -137,7 +135,7 @@
                 <div class="col-lg-4 col-md-6 d-grid align-items-center p-4 pe-lg-10 py-5 my-4" id="hospitals">
                     <div class="row text-center text-md-start">
                         <h2>
-                            Loren <strong class="text-green-2">Ipsum:</strong>
+                            Para <strong class="text-green-2">Gestores:</strong>
                         </h2>
                     </div>
                     <div class="row mt-2rem">
@@ -145,8 +143,8 @@
                             <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                            <p class="d-inline align-middle">
+                                Facilidade no envio de comunicados para os moradores.
                             </p>
                         </div>
                     </div>
@@ -155,8 +153,8 @@
                             <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                            <p class="d-inline align-middle">
+                                Visualize de maneira organizada as reservas de áreas comuns.
                             </p>
                         </div>
                     </div>
@@ -165,8 +163,8 @@
                             <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                            <p class="d-inline align-middle">
+                                Verifique e responda os feedbacks enviados pelos moradores.
                             </p>
                         </div>
                     </div>
@@ -175,33 +173,23 @@
                             <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row mt-2rem">
-                        <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/check.png" class="check" />
-                        </div>
-                        <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                            <p class="d-inline align-middle">
+                                Tenha controle sobre todas as encomendas recebidas.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 d-grid align-items-center p-4 pe-lg-10 py-5 my-4" id="doctors">
                     <div class="row text-center text-md-start">
-                        <h2>Loren <strong class="text-green-2">Ipsum:</strong></h2>
+                        <h2>Para <strong class="text-green-2">Moradores:</strong></h2>
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                            <p class="d-inline align-middle">
+                                Envio de feedbacks diretamente aos gestores.
                             </p>
                         </div>
                     </div>
@@ -210,8 +198,8 @@
                             <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum, Loren Ipsum.
+                            <p class="d-inline align-middle">
+                                Maior facilidade em reservas de salões de festa, quadras, etc.
                             </p>
                         </div>
                     </div>
@@ -220,8 +208,8 @@
                             <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                            <p class="d-inline align-middle">
+                                Visualize e receba notificações sobre suas encomendas.
                             </p>
                         </div>
                     </div>
@@ -230,23 +218,13 @@
                             <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="row mt-2rem">
-                        <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/check.png" class="check" />
-                        </div>
-                        <div class="col-10 ps-4">
-                            <p class="text-muted d-inline align-middle">
-                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                            <p class="d-inline align-middle">
+                                Libere visitantes diretamente pelo aplicativo.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-4 d-none d-lg-flex align-items-center">
+                <div class="col-4 d-none d-lg-flex align-items-center py-5">
                     <img src="assets/img/apartment.png" class="w-100"/>
                 </div>
             </div>
@@ -439,7 +417,7 @@
         <div class="container pb-4">
             <div class="row">
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-last text-center text-lg-start">
-                    <a class="btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium"
+                    <a class="btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium w-100"
                         href=""
                         target="_blank">Loren Ipsum</a>
                 </div>
@@ -469,7 +447,7 @@
                 </div>
                 <div class="me-md-auto text-center text-lg-start text-white pt-5 pt-lg-0 d-inline-block">
                     <span>© 2023-2023 - Todos os direitos reservados -</span>
-                    <span>Condominus, a trademark by Skyline</span>
+                    <span>CondoLife, a trademark by Skyline</span>
                     <br>
                     <span><a href="https://www.freepik.com/free-vector/suburbia-buildings-composition-with-lawns-apartments-streets-isometric_7286650.htm#query=apartment%20building%20isometric&position=11&from_view=search&track=ais" class="text-white text-decoration-none">Hero Image by macrovector</a> on Freepik</span>
                     <br>
