--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 col-md-10 mt-4 mt-lg-0" >
+                <div class="col-lg-6 col-12 col-md-10 mt-4 mt-lg-0">
                     <img src="assets/img/condominium.png" class="w-100"></img>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                                 Surgimos para facilitar e melhorar o processo de gestão ao máximo.
                                 <br />
                                 <br />
-                                Com a utilização de nosso sistema, além de tornar todos os processos muito mais fáceis, 
+                                Com a utilização de nosso sistema, além de tornar todos os processos muito mais fáceis,
                                 <b>terá também uma organização nunca vista antes!</b>
                             </p>
                         </div>
@@ -92,7 +92,8 @@
                                 <div class="col-8">
                                     <h3 class="h5 mb-2 fw-bold">Encomendas</h3>
                                     <p class="text-muted mb-0">
-                                        Tenha registro de todas as encomendas recebidas, atribuídas à seu respectivo morador
+                                        Tenha registro de todas as encomendas recebidas, atribuídas à seu respectivo
+                                        morador
                                     </p>
                                 </div>
                             </div>
@@ -225,7 +226,7 @@
                     </div>
                 </div>
                 <div class="col-4 d-none d-lg-flex align-items-center py-5">
-                    <img src="assets/img/apartment.png" class="w-100"/>
+                    <img src="assets/img/apartment.png" class="w-100" />
                 </div>
             </div>
         </div>
@@ -233,9 +234,8 @@
     <!-- Contact -->
     <section class="page-section pb-0" id="contact">
         <div class="container px-4 px-lg-5 text-center">
-            <a class="btn btn-primary btn-lg px-5 py-3 fs-6 fw-medium rounded-pill"
-                href=""
-                target="_blank">Loren Ipsum</a>
+            <a class="btn btn-primary btn-lg px-5 py-3 fs-6 fw-medium rounded-pill" href="" target="_blank">Entre em
+                contato</a>
         </div>
     </section>
     <!-- Tutorial -->
@@ -243,8 +243,8 @@
         <div class="container p-5 text-center border rounded-4 border-primary">
             <div class="carousel slide carousel-fade" id="tutorial">
                 <div class="row">
-                    <h2 class="text-primary fw-light">Loren Ipsum Loren Ipsum?</h2>
-                    <h3 class="text-secondary"><b>Loren Ipsum Loren Ipsum</b></h3>
+                    <h2 class="text-primary fw-light">Conheça nosso aplicativo!</h2>
+                    <h3 class="text-secondary"><b>Visão dos moradores</b></h3>
                 </div>
                 <div class="carousel-indicators dashed py-5 p-lg-5 mx-lg-5 row justify-content-center position-static">
                     <div class="col px-0 d-flex justify-content-center">
@@ -284,12 +284,13 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Loren Ipsum <b><a href="" target="_blank"
-                                            class="text-secondary"><u>Loren Ipsum</u></a></b> 
+                                    Loren Ipsum <b><a href="" target="_blank" class="text-secondary"><u>Loren
+                                                Ipsum</u></a></b>
                                 </h2>
                                 <p class="text-secondary mb-5">
                                     <b>Loren Ipsum:</b> Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
-                                    <br /><a href="#form-col" class="text-secondary text-decoration-none">Loren Ipsum</a>
+                                    <br /><a href="#form-col" class="text-secondary text-decoration-none">Loren
+                                        Ipsum</a>
                                     Loren Ipsum Loren Ipsum Loren Ipsum.
                                 </p>
                             </div>
@@ -398,8 +399,7 @@
                                             ao início
                                         </a>
                                         <a class="btn btn-primary btn-lg px-lg-4 py-3 fs-6 rounded-pill fw-medium text-sm-nowrap"
-                                            href=""
-                                            target="_blank">Loren Ipsum</a>
+                                            href="" target="_blank">Entre em contato</a>
                                     </div>
                                 </div>
                             </div>
@@ -417,9 +417,8 @@
         <div class="container pb-4">
             <div class="row">
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-last text-center text-lg-start">
-                    <a class="btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium w-100"
-                        href=""
-                        target="_blank">Loren Ipsum</a>
+                    <a class="btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium w-100" href=""
+                        target="_blank">Entre em contato</a>
                 </div>
 
                 <div
@@ -429,31 +428,60 @@
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-0 text-center text-lg-start">
                     <h5 class="text-white mb-4">Suporte ao cliente</h5>
-                    <a href="" class="text-white text-decoration-none">Fale Conosco</a>
+                    <a href="mailto:condolife@gmail.com" class="text-white text-decoration-none">Fale Conosco</a>
                 </div>
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-1 text-center text-lg-start">
-                    <h5 class="text-white mb-4">Institucional</h5>
-                    <a href="" class="text-white text-decoration-none">Loren Ipsum</a>
+                    <h5 class="text-white mb-4">Redes sociais</h5>
+                    <a href="" class="text-white text-decoration-none">Instagram</a>
                 </div>
             </div>
         </div>
         <div class="container ">
+            <!--
             <div class="border-top d-lg-flex pt-5 text-center text-lg-start order-lg-first">
                 <div class="text-center text-lg-end text-white order-lg-last">
                     <a href="assets/docs/terms.html" class="text-white text-decoration-none">Termos de uso</a>
                     <a href="assets/docs/privacy.html" class="text-white text-decoration-none ms-3">Política de
                         privacidade</a>
                 </div>
+                    
                 <div class="me-md-auto text-center text-lg-start text-white pt-5 pt-lg-0 d-inline-block">
                     <span>© 2023-2023 - Todos os direitos reservados -</span>
                     <span>CondoLife, a trademark by Skyline</span>
                     <br>
-                    <span><a href="https://www.freepik.com/free-vector/suburbia-buildings-composition-with-lawns-apartments-streets-isometric_7286650.htm#query=apartment%20building%20isometric&position=11&from_view=search&track=ais" class="text-white text-decoration-none">Hero Image by macrovector</a> on Freepik</span>
+                    <span><a href="https://www.freepik.com/free-vector/suburbia-buildings-composition-with-lawns-apartments-streets-isometric_7286650.htm#query=apartment%20building%20isometric&position=11&from_view=search&track=ais"
+                            class="text-white text-decoration-none">Hero Image by macrovector</a> on Freepik</span>
                     <br>
-                    <span>Icon by <a href="https://freeicons.io/profile/726" class="text-white text-decoration-none">Free Preloaders</a> on <a href="https://freeicons.io" class="text-white text-decoration-none">freeicons.io</a></span>
+                    <span>Icon by <a href="https://freeicons.io/profile/726"
+                            class="text-white text-decoration-none">Free Preloaders</a> on <a
+                            href="https://freeicons.io" class="text-white text-decoration-none">freeicons.io</a></span>
                     <br>
-                    <span>Apartment image by <a href="https://www.pngwing.com/en/free-png-zckqy" class="text-white text-decoration-none">PNG Wing</a></span>
+                    <span>Apartment image by <a href="https://www.pngwing.com/en/free-png-zckqy"
+                            class="text-white text-decoration-none">PNG Wing</a></span>
+                </div>
+            </div>
+            -->
+            <div class="border-top d-lg-flex pt-5 text-center text-lg-start order-lg-first">
+                <div class="text-center text-lg-end text-white order-lg-last">
+                    <span><a href="https://www.freepik.com/free-vector/suburbia-buildings-composition-with-lawns-apartments-streets-isometric_7286650.htm#query=apartment%20building%20isometric&position=11&from_view=search&track=ais"
+                            class="text-white text-decoration-none">Hero Image by macrovector</a> on <a
+                            href="https://br.freepik.com/" class="text-white text-decoration-none">Freepik</a></span>
+                    <br>
+                    <span>Icon by <a href="https://freeicons.io/profile/726"
+                            class="text-white text-decoration-none">Free Preloaders</a> on <a
+                            href="https://freeicons.io" class="text-white text-decoration-none">freeicons.io</a></span>
+                    <br>
+                    <span>Apartment image by <a href="https://www.pngwing.com/en/free-png-zckqy"
+                            class="text-white text-decoration-none">PNG Wing</a></span>
+                </div>
+
+                <div class="me-md-auto text-center text-lg-start text-white pt-5 pt-lg-0 d-inline-block">
+                    <span>© 2023-2023 - Todos os direitos reservados</span>
+                    <br>
+                    <span>CondoLife, a trademark by Skyline</span>
+                    <br>
+
                 </div>
             </div>
         </div>
