finishing app tour

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Roboto:wght@300;400;500;700&display=swap"
         rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -281,17 +282,13 @@
                 <div class="carousel-inner">
                     <div class="row carousel-item flex-column-reverse flex-md-row active">
                         <div
-                            class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
+                            class="col-lg-6 col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Loren Ipsum <b><a href="" target="_blank" class="text-secondary"><u>Loren
-                                                Ipsum</u></a></b>
+                                    Entrar
                                 </h2>
                                 <p class="text-secondary mb-5">
-                                    <b>Loren Ipsum:</b> Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
-                                    <br /><a href="#form-col" class="text-secondary text-decoration-none">Loren
-                                        Ipsum</a>
-                                    Loren Ipsum Loren Ipsum Loren Ipsum.
+                                    <b>Fácil acesso:</b> os moradores poderão se cadastrar utilizando o número do condomínio.
                                 </p>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -300,7 +297,7 @@
                                         class="bi bi-chevron-right ms-2"></i></a>
                             </div>
                         </div>
-                        <div class="col-md-4 text-md-end">
+                        <div class="col-md-4 offset-lg-2 text-md-end">
                             <img src="assets/img/Normal-1.png" class="w-75" />
                         </div>
                     </div>
@@ -309,7 +306,7 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Loren Ipsum <b>Loren Ipsum</b> Loren Ipsum Loren Ipsum.
+                                    Fácil <b>Cadastro</b> utilizando o número do condomínio.
                                 </h2>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -335,7 +332,7 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    <b>Loren Ipsum</b> Loren Ipsum.
+                                    <b>Menu</b> de funcionalidades.
                                 </h2>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -361,7 +358,7 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Loren Ipsum <b>Loren Ipsum</b> Loren Ipsum <b>Loren Ipsum.</b>
+                                    Chat de <b>Moradores</b> e <b>Síndico.</b>
                                 </h2>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -387,7 +384,7 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    <b>Loren Ipsum!</b> Loren Ipsum Loren Ipsum.
+                                    Área de cadastro de reservas.
                                 </h2>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -405,7 +402,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 text-md-end">
-                            <img src="assets/img/Normal-1.png" class="w-75" />
+                            <img src="assets/img/Normal-5.png" class="w-75" />
                         </div>
                     </div>
                 </div>
