ajustando site no mobile

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="col-lg-5 offset-lg-1 pe-0">
                             <div class="row mt-5 mt-md-0">
                                 <div class="col-4 d-flex align-items-center">
-                                    <img src="./assets/icon/lock.png" class="h-auto w-100 mx-auto" />
+                                    <img src="./assets/icon/lock.png" class="h-auto w-100 w-lg-75 mx-auto" />
                                 </div>
                                 <div class="col-8">
                                     <h3 class="h5 mb-2 fw-bold">Controle de acesso</h3>
@@ -88,7 +88,7 @@
                         <div class="col-lg-5 offset-lg-1 pe-0">
                             <div class="row mt-5 mt-lg-0">
                                 <div class="col-4 d-flex align-items-center">
-                                    <img src="./assets/icon/box.png" class="h-auto w-100 mx-auto" />
+                                    <img src="./assets/icon/box.png" class="h-auto w-100 w-lg-75 mx-auto" />
                                 </div>
                                 <div class="col-8">
                                     <h3 class="h5 mb-2 fw-bold">Encomendas</h3>
@@ -102,7 +102,7 @@
                         <div class="col-lg-5 offset-lg-1 pe-0">
                             <div class="row mt-5">
                                 <div class="col-4 d-flex align-items-center">
-                                    <img src="./assets/icon/comms.png" class="h-auto w-100 mx-auto" />
+                                    <img src="./assets/icon/comms.png" class="h-auto w-100 w-lg-75 mx-auto" />
                                 </div>
                                 <div class="col-8">
                                     <h3 class="h5 mb-2 fw-bold">Comunicação</h3>
@@ -115,7 +115,7 @@
                         <div class="col-lg-5 offset-lg-1 pe-0">
                             <div class="row mt-5">
                                 <div class="col-4 d-flex align-items-center">
-                                    <img src="./assets/icon/calendar.png" class="h-auto w-100 mx-auto" />
+                                    <img src="./assets/icon/calendar.png" class="h-auto w-100 w-lg-75 mx-auto" />
                                 </div>
                                 <div class="col-8">
                                     <h3 class="h5 mb-2 fw-bold">Liberdade para reservar</h3>
@@ -140,7 +140,7 @@
                             Para <strong class="text-green-2">Gestores:</strong>
                         </h2>
                     </div>
-                    <div class="row mt-2rem">
+                    <div class="row mt-2rem mt-lg-3rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
@@ -150,7 +150,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row mt-2rem">
+                    <div class="row mt-2rem mt-lg-3rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
@@ -160,7 +160,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row mt-2rem">
+                    <div class="row mt-2rem mt-lg-3rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
@@ -170,7 +170,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row mt-2rem">
+                    <div class="row mt-2rem mt-lg-3rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
@@ -185,7 +185,7 @@
                     <div class="row text-center text-md-start">
                         <h2>Para <strong class="text-green-2">Moradores:</strong></h2>
                     </div>
-                    <div class="row mt-2rem">
+                    <div class="row mt-2rem mt-lg-3rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
@@ -195,7 +195,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row mt-2rem">
+                    <div class="row mt-2rem mt-lg-3rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
@@ -205,7 +205,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row mt-2rem">
+                    <div class="row mt-2rem mt-lg-3rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
@@ -215,7 +215,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row mt-2rem">
+                    <div class="row mt-2rem mt-lg-3rem">
                         <div class="col-1 d-flex align-items-center">
                             <img src="assets/icon/check.png" class="check" />
                         </div>
@@ -478,7 +478,6 @@
                     <br>
                     <span>CondoLife, a trademark by Skyline</span>
                     <br>
-
                 </div>
             </div>
         </div>
