--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-1 text-center text-lg-start">
                     <h5 class="text-white mb-4">Fundadores</h5>
-                    <a href="" class="text-white text-decoration-none fs-6">Breno Jefferson Santana de Souza</a><br>
+                    <a href="" class="text-white text-decoration-none">Breno Jefferson Santana de Souza</a><br>
                     <a href="" class="text-white text-decoration-none">Gabriel Vitor Grossi Lourenço</a><br>
                     <a href="" class="text-white text-decoration-none">Nicolas Nascimento Lima</a><br>
                     <a href="" class="text-white text-decoration-none">Rafael Menezes Moraes</a><br>
